# Single_Face_Tracking_using_5_inbuilt_OpenCV_trackers

./: CMakeLists.txt  README.md  build.sh  facetracker.cpp  tracking.cpp
